Rewrite of "5 Thinks" summary items by Copilot

--- a/2025/2025-04-27-wir.md
+++ b/2025/2025-04-27-wir.md
@@ -1,3 +1,46 @@
+<!--
+
+In this draft, had Copilot re-write the "Five Things" summary items using an iterative pair of queries:
+
+# Query 1
+
+The bulleted news summary items in the "Five Things" section are in very rough shape. They need a re-write for brevity and flow, please. Please output markdown that includes embedded hyperlinks within the text.
+
+# Response
+
+### Five Things: April 20-26, 2025
+
+- **Markets rally but caution remains:** Bitcoin surged early in the week, and stocks improved with an optimistic tariff outlook. However, the Dow is still on track for its worst month since the Great Depression. ([MarketWatch](https://www.marketwatch.com))
+- **U.S. targets Google monopoly:** The government is intensifying efforts to [break up Google](https://www.nbcnews.com/tech/tech-news/google-faces-us-government-attempt-break-company-search-monopoly-case) over its search engine monopoly.
+- **Robots compete in Beijing marathon:** In a groundbreaking event, 21 humanoid robots raced against humans in the [Beijing Half-Marathon](https://www.newsweek.com/robots-race-humans-beijing-half-marathon-2025). ([Newsweek](https://www.newsweek.com))
+- **New SEC chair embraces crypto:** Paul Atkins, a former SEC commissioner and crypto advocate, has been sworn in as chairman, signaling a [pro-crypto shift](https://www.coindesk.com/policy/2025/04/21/paul-atkins-sworn-in-as-sec-chairman/).
+- **Circle integrates with traditional banking:** The $60 billion USDC stablecoin issuer has launched a [new payments network](https://www.theblock.co/post/351720/circle-launches-payments-network-to-connect-banks-and-stablecoins), bridging crypto and banking systems. ([The Block](https://www.theblock.co))
+
+# Query 2
+
+Could you do another draft please that includes more of the original links? It's ok for each bullet point to run up to five sentences in length.
+
+# Response
+
+### Five Things: April 20-26, 2025
+
+- **Markets show mixed signals:** Bitcoin experienced a significant rally early in the week, boosting confidence among crypto investors. Stock markets also saw gains, supported by optimism around improved tariff negotiations. However, concerns linger as the Dow remains on track for its worst month since the Great Depression. Analysts are debating whether this is a temporary setback or part of a larger economic trend. ([MarketWatch](https://www.marketwatch.com))
+
+- **U.S. antitrust crackdown on Google:** The federal government has escalated its case against Google by pushing to [break up the company](https://www.nbcnews.com/tech/tech-news/google-faces-us-government-attempt-break-company-search-monopoly-case). Regulators argue that Google’s dominance in search stifles competition and harms consumers. This case could set a precedent for future tech antitrust actions. Industry experts are divided, with some predicting a lengthy court battle and others suggesting this could lead to broader reforms in the tech sector. ([NBC News](https://www.nbcnews.com))
+
+- **Robots race humans in Beijing marathon:** In a groundbreaking experiment, 21 humanoid robots competed in the [Beijing Half-Marathon](https://www.newsweek.com/robots-race-humans-beijing-half-marathon-2025), marking a historic first for AI and robotics. The event showcased advancements in robotics technology, as some robots completed the grueling race alongside human runners. Newsweek’s coverage highlighted the implications for AI’s expanding role in human activities. This milestone sparks questions about the future of robotics in sports and other aspects of life. ([Newsweek](https://www.newsweek.com))
+
+- **Paul Atkins sworn in as pro-crypto SEC chair:** Paul Atkins, a former SEC commissioner known for his ties to the crypto industry, has officially assumed the role of SEC chairman. His appointment signals a potential shift toward more favorable regulatory policies for the crypto sector. Atkins has previously advocated for a balanced approach to regulation, emphasizing innovation while protecting investors. Industry leaders are optimistic about what his leadership could mean for blockchain and cryptocurrency adoption. ([CoinDesk](https://www.coindesk.com/policy/2025/04/21/paul-atkins-sworn-in-as-sec-chairman/))
+
+- **Circle bridges stablecoins and traditional banking:** Circle, the company behind the $60 billion USDC stablecoin, has launched a [new payments network](https://www.theblock.co/post/351720/circle-launches-payments-network-to-connect-banks-and-stablecoins). This initiative aims to connect stablecoins with traditional banking systems, enabling faster and more efficient transactions. The move is expected to strengthen the role of stablecoins in global finance. As stablecoins like USDC become more integrated with banks, the lines between traditional and decentralized finance continue to blur. ([The Block](https://www.theblock.co))
+
+
+Latter version is much closer to what we'll ultimately need. For now, I'll include Copilot's drafts in the list below, with old Leo versions commented out to preserve links I might want to restore later.
+
+Next step will be to do a final re-write/edit myself.
+
+-->
+
 # AI tips for journalists <!-- Need AI prompts to generate better hed, subhead later, when lead item is finished. -->
 ## tktk
 
@@ -40,23 +83,58 @@
 
 ### Five Things: April 20-26, 2025
 
-- **Markets:** <!-- Big bicoin rally early in the week. Stocks looking better as well, with improved tariff outlook. But the Dow may still be headed for its worst month since the Depression. --> Bitcoin's price has [recovered to $94,000](https://www.coindesk.com/markets/2025/04/25/bitcoin-whales-return-in-force-buy-the-btc-price-rally-on-chain-data-show), with large investors, known as "whales," buying up coins from the market. According to Glassnode's data, wallets holding over 10,000 BTC have a high accumulation trend score, indicating significant buying activity. This trend suggests that investors are adopting a long-term holding strategy, with outflows from centralized exchanges reaching a two-year high. | Bitcoin has [reached a new milestone](https://www.coindesk.com/markets/2025/04/23/bitcoin-becomes-fifth-largest-global-asset-surpasses-google-s-market-cap), becoming the fifth-largest asset globally by market capitalization, with a value of $1.86 trillion. This achievement surpasses tech giant Google, with Bitcoin's price breaking above $94,000. The renewed optimism in the market is attributed to easing tensions in the U.S.–China tariff trade war, which has fueled gains for both Bitcoin and tech stocks. | *Bitcoin ETFs Experience Surge in Investments* American investors poured [nearly $1 billion](https://decrypt.co/315966/bitcoin-etfs-bounce-back-billion-day) into Bitcoin ETFs on Tuesday, marking the highest amount since January. This surge comes as the price of Bitcoin has risen to its highest point since early March, with the largest cryptocurrency by market value up almost 14% over the past 14 days. The ARK 21Shares Bitcoin ETF and BlackRock's iShares Bitcoin Trust led the surge, with $267 million and $193.5 million in net inflows, respectively. | This deal marks the [largest financing facility of its kind](https://decrypt.co/315987/sol-strategies-secures-500m-buy-more-solana) in the Solana ecosystem, with SOL Strategies aiming to become the leading institutional staking platform. The move comes as Solana's price has surged over 20% in the past two weeks, outpacing Bitcoin. | Bitcoin is showing [signs of maturity](https://cointelegraph.com/news/bitcoin-decouples-from-stocks-gains-safe-haven-status) as a global asset, decoupling from the US stock market and trading more like precious metals, according to Nansen CEO Alex Svanevik. Despite ongoing trade tensions and rising recession odds, Bitcoin's price has staged a 12% recovery over the past two weeks. This resilience is attributed to its growing role as a safe-haven asset and potential benefits from regulatory development and the US Bitcoin Reserve. | Crypto exchanges are increasingly [launching](https://cointelegraph.com/news/crypto-firms-moving-into-wall-street-growing-synergy) traditional investment offerings, signaling a convergence between the crypto and traditional finance (TradFi) spaces. This move aims to provide investors with more flexibility and access to both worlds. Key players like Kraken and Coinbase are leading the charge, with some seeing TradFi as a safety net and others as a launchpad for broader adoption. | A Solana whale has reportedly [accumulated](https://cointelegraph.com/news/solana-whale-153-million-profit-staking-4-years) over $153 million in unrealized gains after staking nearly 1 million tokens at a price of $27 in 2021, with the tokens now worth around $166 million. The whale recently started offloading a portion of the tokens, sending 100,000 SOL to Binance. This move comes as Solana briefly overtook Ethereum in staking market cap before reclaiming its position. | The CME Group plans to [launch XRP futures](https://www.theblock.co/post/351899/cme-group-plans-to-launch-xrp-futures-its-fourth-ever-crypto-add) within a month, pending regulatory review, marking its fourth foray into cryptocurrency offerings. This move follows the company's listing of Solana futures and reflects its increasing interest in crypto amid shifting regulatory circumstances in the U.S. XRP, with a market capitalization of over $127 billion, is seen as a natural expansion for the CME given its institutional-friendly blockchain and partnerships with major financial institutions. | According to a recent report from the FBI's Internet Crime Complaint Center, Americans aged 60 and older lost nearly $3 billion to crypto fraud in 2024, despite making up only 17% of the population. This demographic accounted for 30% of the total crypto fraud losses, with an average loss of $83,000 per victim. The FBI has attributed the rise in crypto fraud to scams such as ATM and kiosk fraud, which saw incidents almost double from 2023 to 2024. [Read the full story](https://www.example.com)
+*The week's top headlines about blockchain, AI, and other emerging technologies and trends re-shaping the web:*
+
+- **Markets show mixed signals:** Bitcoin experienced a significant rally early in the week, boosting confidence among crypto investors. Stock markets also saw gains, supported by optimism around improved tariff negotiations. However, concerns linger as the Dow remains on track for its worst month since the Great Depression. Analysts are debating whether this is a temporary setback or part of a larger economic trend. ([MarketWatch](https://www.marketwatch.com))
+
+<!-- Old Leo version
+- **Markets:** <!-- Big bicoin rally early in the week. Stocks looking better as well, with improved tariff outlook. But the Dow may still be headed for its worst month since the Depression.  Bitcoin's price has [recovered to $94,000](https://www.coindesk.com/markets/2025/04/25/bitcoin-whales-return-in-force-buy-the-btc-price-rally-on-chain-data-show), with large investors, known as "whales," buying up coins from the market. According to Glassnode's data, wallets holding over 10,000 BTC have a high accumulation trend score, indicating significant buying activity. This trend suggests that investors are adopting a long-term holding strategy, with outflows from centralized exchanges reaching a two-year high. | Bitcoin has [reached a new milestone](https://www.coindesk.com/markets/2025/04/23/bitcoin-becomes-fifth-largest-global-asset-surpasses-google-s-market-cap), becoming the fifth-largest asset globally by market capitalization, with a value of $1.86 trillion. This achievement surpasses tech giant Google, with Bitcoin's price breaking above $94,000. The renewed optimism in the market is attributed to easing tensions in the U.S.–China tariff trade war, which has fueled gains for both Bitcoin and tech stocks. | *Bitcoin ETFs Experience Surge in Investments* American investors poured [nearly $1 billion](https://decrypt.co/315966/bitcoin-etfs-bounce-back-billion-day) into Bitcoin ETFs on Tuesday, marking the highest amount since January. This surge comes as the price of Bitcoin has risen to its highest point since early March, with the largest cryptocurrency by market value up almost 14% over the past 14 days. The ARK 21Shares Bitcoin ETF and BlackRock's iShares Bitcoin Trust led the surge, with $267 million and $193.5 million in net inflows, respectively. | This deal marks the [largest financing facility of its kind](https://decrypt.co/315987/sol-strategies-secures-500m-buy-more-solana) in the Solana ecosystem, with SOL Strategies aiming to become the leading institutional staking platform. The move comes as Solana's price has surged over 20% in the past two weeks, outpacing Bitcoin. | Bitcoin is showing [signs of maturity](https://cointelegraph.com/news/bitcoin-decouples-from-stocks-gains-safe-haven-status) as a global asset, decoupling from the US stock market and trading more like precious metals, according to Nansen CEO Alex Svanevik. Despite ongoing trade tensions and rising recession odds, Bitcoin's price has staged a 12% recovery over the past two weeks. This resilience is attributed to its growing role as a safe-haven asset and potential benefits from regulatory development and the US Bitcoin Reserve. | Crypto exchanges are increasingly [launching](https://cointelegraph.com/news/crypto-firms-moving-into-wall-street-growing-synergy) traditional investment offerings, signaling a convergence between the crypto and traditional finance (TradFi) spaces. This move aims to provide investors with more flexibility and access to both worlds. Key players like Kraken and Coinbase are leading the charge, with some seeing TradFi as a safety net and others as a launchpad for broader adoption. | A Solana whale has reportedly [accumulated](https://cointelegraph.com/news/solana-whale-153-million-profit-staking-4-years) over $153 million in unrealized gains after staking nearly 1 million tokens at a price of $27 in 2021, with the tokens now worth around $166 million. The whale recently started offloading a portion of the tokens, sending 100,000 SOL to Binance. This move comes as Solana briefly overtook Ethereum in staking market cap before reclaiming its position. | The CME Group plans to [launch XRP futures](https://www.theblock.co/post/351899/cme-group-plans-to-launch-xrp-futures-its-fourth-ever-crypto-add) within a month, pending regulatory review, marking its fourth foray into cryptocurrency offerings. This move follows the company's listing of Solana futures and reflects its increasing interest in crypto amid shifting regulatory circumstances in the U.S. XRP, with a market capitalization of over $127 billion, is seen as a natural expansion for the CME given its institutional-friendly blockchain and partnerships with major financial institutions. | According to a recent report from the FBI's Internet Crime Complaint Center, Americans aged 60 and older lost nearly $3 billion to crypto fraud in 2024, despite making up only 17% of the population. This demographic accounted for 30% of the total crypto fraud losses, with an average loss of $83,000 per victim. The FBI has attributed the rise in crypto fraud to scams such as ATM and kiosk fraud, which saw incidents almost double from 2023 to 2024. [Read the full story](https://www.example.com)
+
+-->
+
+- **U.S. antitrust crackdown on Google:** The federal government has escalated its case against Google by pushing to [break up the company](https://www.nbcnews.com/tech/tech-news/google-faces-us-government-attempt-break-company-search-monopoly-case). Regulators argue that Google’s dominance in search stifles competition and harms consumers. This case could set a precedent for future tech antitrust actions. Industry experts are divided, with some predicting a lengthy court battle and others suggesting this could lead to broader reforms in the tech sector. ([NBC News](https://www.nbcnews.com))
+
+<!-- Old Leo version
 
 - **U.S. antitrust cases:** The U.S. government is pushing for Google to be [broken up](https://www.nbcnews.com/tech/tech-news/google-faces-us-government-attempt-break-company-search-monopoly-case-rcna202206?link_source=ta_bluesky_link&taid=680695c966e4b3000122e978) as a punishment for its alleged search engine monopoly, with a federal judge set to decide on remedies by Labor Day. The case, which has been ongoing since 2020, involves allegations that Google has been stifling competition and innovation, and could have significant implications for the tech industry. | The Justice Department is [urging](https://www.wsj.com/tech/google-justice-department-search-monopoly-hearing-d527c010?st=8x7TPT&reflink=desktopwebshare_permalink) a federal judge to force Google to loosen its grip on the search engine market by selling its Chrome web browser, as part of a landmark antitrust case. The move, which could result in new limits on Google, comes after a major ruling against the company in a separate antitrust case, and has been backed by more than 30 state attorneys general. | In a surprising twist, internal emails from 2018 [have surfaced](https://techcrunch.com/2025/04/21/mark-zuckerberg-once-suggested-spinning-out-instagram-as-a-solution-to-its-cannibalization-of-facebook/) showing that Meta CEO Mark Zuckerberg considered spinning out Instagram as a separate business due to concerns that its growth was cannibalizing Facebook's user engagement. According to the emails, Zuckerberg proposed building bridges between Meta's apps to prevent this cannibalization and even suggested rebranding Instagram and WhatsApp to emphasize Facebook's dominance.
 
+-->
+
+
+
+- **Robots race humans in Beijing marathon:** In a groundbreaking experiment, 21 humanoid robots competed in the [Beijing Half-Marathon](https://www.newsweek.com/robots-race-humans-beijing-half-marathon-2025), marking a historic first for AI and robotics. The event showcased advancements in robotics technology, as some robots completed the grueling race alongside human runners. Newsweek’s coverage highlighted the implications for AI’s expanding role in human activities. This milestone sparks questions about the future of robotics in sports and other aspects of life. ([Newsweek](https://www.newsweek.com))
+
+
+<!-- Old Leo version
+
 - **Newsweek has been doing a bang-up job covering specific AI use cases lately.** In a historic first, 21 humanoid robots [competed](https://www.newsweek.com/robots-race-humans-beijing-half-marathon-humanoid-2061818) in a bipedal robot half-marathon in Beijing, with six robots successfully completing the 21.1-kilometer course. The event showcased the current state of humanoid robot technology, highlighting both impressive advancements and significant limitations in areas such as hardware robustness and endurance. |  A recent study in Dubai found that one-third of government jobs are at risk of being [replaced by AI](https://www.newsweek.com/ai-impact-artificial-intelligence-dubai-uae-2062953), with customer service, administrative, and front-line roles being the most vulnerable. The city's increasing reliance on AI could set an example for other governments to follow, highlighting the need for workers to adapt to an AI-driven workforce and for organizations to develop strategies to mitigate job displacement. | Electric Era has [debuted](https://www.newsweek.com/ai-enabled-electric-vehicle-charging-coming-this-year-2062193) its proprietary fast-charging technology, which utilizes artificial intelligence to enhance the electric vehicle charging experience. The AI-infused charging stations, powered by the company's Retailer AI software platform, offer personalized concierge experiences and retail engagement opportunities, allowing users to order food or find nearby points of interest while charging. | Hospitals are developing [their own AI tools](https://www.newsweek.com/ai-powered-claims-tools-healthcare-revenue-cycle-access-health-2062141) to improve the revenue cycle, with some leaders welcoming the help and others fearing it's just a Band-Aid for a broken system. According to a recent survey, only 7% of hospital CFOs expect AI to improve relationships with insurance companies, while 64% remain uncertain about its impact, but companies like Iodine Software and Cofactor AI are already showing promise in automating collections and improving labor efficiency. | Newsweek's topic page for AI is [here](https://www.newsweek.com/topic/artificial-intelligence).
 
+-->
+
+
+
+- **Paul Atkins sworn in as pro-crypto SEC chair:** Paul Atkins, a former SEC commissioner known for his ties to the crypto industry, has officially assumed the role of SEC chairman. His appointment signals a potential shift toward more favorable regulatory policies for the crypto sector. Atkins has previously advocated for a balanced approach to regulation, emphasizing innovation while protecting investors. Industry leaders are optimistic about what his leadership could mean for blockchain and cryptocurrency adoption. ([CoinDesk](https://www.coindesk.com/policy/2025/04/21/paul-atkins-sworn-in-as-sec-chairman/))
+
+
+
+<!-- Old Leo version
 - **New pro-crypto SEC chair Atkins sworn in.** **Paul Atkins Sworn in as SEC Chairman**: Paul Atkins, a former SEC commissioner and crypto industry advisor, has been sworn in as the new chairman of the Securities and Exchange Commission. In his inaugural remarks, Atkins vowed to provide a "firm, regulatory foundation for digital assets" and work with President Trump to advance his agenda for bolstering the US economy and establishing the country as a leader in the global markets. [Link](https://www.upi.com/Top_News/US/2025/04/22/Paul-Atkins-sworn-in-sec-chairman/6911745372094/) | New SEC Chair Paul Atkins is facing pressure to decide on 72 pending crypto-related ETF applications, with XRP leading the filings. Atkins, a pro-innovation advocate, has expressed support for clear rules and a "firm regulatory foundation for digital assets," but it remains to be seen whether the SEC under his leadership will approve the pending ETFs. [Link](https://www.ibtimes.com/new-sec-chair-paul-atkins-under-pressure-72-crypto-related-etf-applications-xrp-leads-filings-3770850) | *Donald Trump's TRUMP Memecoin Sees 70% Surge After Dinner Event Announcement**: The TRUMP token rallied on Wednesday after an invitation to a dinner event with President Donald Trump for its largest holders was announced, briefly hitting $16 and reaching its strongest price since early March. This comes after $300 million worth of previously locked-up tokens were added to circulation last week, with 75% of existing tokens still locked up and another unlock expected in July. [Link](https://www.coindesk.com/markets/2025/04/23/trump-coin-jumps-70-on-president-s-dinner-event-for-top-token-holders) | The U.S. Securities and Exchange Commission (SEC) has delayed its decision on several crypto-related proposals, including ETFs for Polkadot and Hedera, until June 11. This delay is part of the agency's review of dozens of filings to launch crypto exchange-traded funds, which has been seen as a positive sign for the crypto industry under the current SEC leadership. [Link](https://www.theblock.co/post/351909/us-sec-delays-decisions-on-polkadot-and-hedera-etfs-as-agency-weighs-dozens-of-crypto-proposals) | Cantor Equity Partners (CEP) stock has surged 130% after investors flocked to the company ahead of its potential merger with Twenty One Capital, a bitcoin investment vehicle backed by major players like Tether, Bitfinex, and SoftBank. The proposed merger is seen as a high-leverage bet on institutional bitcoin adoption, with Twenty One Capital potentially holding over 42,000 BTC at launch and introducing new metrics to measure shareholder value in BTC terms. [Link](https://www.coindesk.com/markets/2025/04/24/cantor-equity-shares-surge-55-jump-another-15-pre-market-on-bitcoin-spac-deal-buzz) | The US Securities and Exchange Commission (SEC) has delayed its decision on several crypto proposals, including those from Grayscale and Canary, to list and trade funds based on Polkadot and Hedera tokens. The agency is weighing dozens of filings to launch crypto exchange-traded funds and has pushed back its deadline to June 11 to consider the proposals. [Link](https://www.theblock.co/post/351909/us-sec-delays-decisions-on-polkadot-and-hedera-etfs-as-agency-weighs-dozens-of-crypto-proposals)
 
-- **Stablecoins are getting more intertwined with traditional banking.** *Circle Launches New Payments Network* Circle, the company behind the $60 billion USDC stablecoin, is launching a new payments and cross-border remittance network, aiming to rival Mastercard and Visa. The network, initially targeting remittances, is seen as a strategic move to consolidate Circle's position in the payments space, leveraging the growing adoption of stablecoins for global money transfers. [Link](https://www.coindesk.com/business/2025/04/21/stablecoin-giant-circle-is-launching-a-new-payments-and-remittance-network) | *Crypto firms are making a push to integrate with traditional banking, with several planning to apply for bank charters or licenses.* This move comes as the Trump administration works to incorporate crypto into mainstream finance, with Congress advancing legislation that would establish a regulatory framework for stablecoins and allow them to operate under stricter oversight. [Link](https://www.wsj.com/finance/currencies/crypto-knocks-on-the-door-of-a-banking-world-that-shut-it-out-082b3968?st=zDQWDU&reflink=desktopwebshare_permalink)
+-->
+
+- **Circle bridges stablecoins and traditional banking:** Circle, the company behind the $60 billion USDC stablecoin, has launched a [new payments network](https://www.theblock.co/post/351720/circle-launches-payments-network-to-connect-banks-and-stablecoins). This initiative aims to connect stablecoins with traditional banking systems, enabling faster and more efficient transactions. The move is expected to strengthen the role of stablecoins in global finance. As stablecoins like USDC become more integrated with banks, the lines between traditional and decentralized finance continue to blur. ([The Block](https://www.theblock.co))
+
+<!-- Old Leo version
+
+- **Stablecoins are getting more intertwined with traditional banking.** *Circle Launches New Payments Network* Circle, the company behind the $60 billion USDC stablecoin, is launching a new payments and cross-border remittance network, aiming to rival Mastercard and Visa. The network, initially targeting remittances, is seen as a strategic move to consolidate Circle's position in the payments space, leveraging the growing adoption of stablecoins for global money transfers. [Link](https://www.coindesk.com/business/2025/04/21/stablecoin-giant-circle-is-launching-a-new-payments-and-remittance-network) | *Crypto firms are making a push to integrate with traditional banking, with several planning to apply for bank charters or licenses.* This move comes as the Trump administration works to incorporate crypto into mainstream finance, with Congress advancing legislation that would establish a regulatory framework for stablecoins and allow them to operate under stricter oversight. [Link](https://www.wsj.com/finance/currencies/crypto-knocks-on-the-door-of-a-banking-world-that-shut-it-out-082b3968?st=zDQWDU&reflink=desktopwebshare_permalink) -->
 
 ### Looking Ahead
 
-**I'm adding a new section** this week to cover specific tech events and developments coming up.  If you have conferences, award competitions, or similar time-sensitive stuff in the works, this is a place I'd like to share such info in future updates. Please email me the details at peter[at]w3w[dot]media. 📬
+*I'm adding a new section this week to cover specific tech events and developments coming up.  If you have conferences, award competitions, or similar time-sensitive stuff in the works, this is a place I'd like to share such info in future updates. Please email me the details at peter[at]w3w[dot]media.* 📬
 
 - **In North America, further tests of crypto's political influence loom.** Both leading candidates for prime minister in Canada have discussed crypto policy while campaigning ahead of Monday's snap elections. But it's hardly been a centerpiece of the race, [according to CoinDesk's Nikhilesh De](https://www.coindesk.com/policy/2025/04/23/previewing-the-canadian-elections-crypto-angle). More conventional economic issues like housing and the country's strained diplomatic relationship with the U.S. have garnered far more attention from voters... In Washington, Decrypt's DeSander Lutz [reports](https://decrypt.co/315996/crypto-company-coinbase-stop-pro-crypto-bill-passing) that Coinbase and Andreessen Horowitz have unexpectedly become opponents of standalone passage of a stablecoin bill. The industry giants would instead like to see the issue folded into the broader crypto bill dubbed FIT21. That strategy has rankled other industry players, according to Decrypt.
 
-- **The web3 studio Mythical Games** plans to release a FIFA-inspired football game for mobile devices in June. ([The Block](https://www.theblock.co/post/351731/crypto-fifa-video-game-launching-on-mobile-devices-in-june))
+- **The web3 studio Mythical Games** plans to release a FIFA-inspired football game for mobile devices [in June](https://www.theblock.co/post/351731/crypto-fifa-video-game-launching-on-mobile-devices-in-june).
 
 - **Decrypt's Jose Antonio Lanz** says open-source AI video generators like SkyReels and FramePack are [increasingly competitive](https://decrypt.co/316027/open-source-video-generators-full-length-movies) with their proprietary cousins, pushing boundaries in video length and other features. Hmmm...
 
