--- a/2025/2025-04-27-wir.md
+++ b/2025/2025-04-27-wir.md
@@ -1,45 +1,4 @@
-<!--
-
-In this draft, had Copilot re-write the "Five Things" summary items using an iterative pair of queries:
-
-# Query 1
-
-The bulleted news summary items in the "Five Things" section are in very rough shape. They need a re-write for brevity and flow, please. Please output markdown that includes embedded hyperlinks within the text.
-
-# Response
-
-### Five Things: April 20-26, 2025
-
-- **Markets rally but caution remains:** Bitcoin surged early in the week, and stocks improved with an optimistic tariff outlook. However, the Dow is still on track for its worst month since the Great Depression. ([MarketWatch](https://www.marketwatch.com))
-- **U.S. targets Google monopoly:** The government is intensifying efforts to [break up Google](https://www.nbcnews.com/tech/tech-news/google-faces-us-government-attempt-break-company-search-monopoly-case) over its search engine monopoly.
-- **Robots compete in Beijing marathon:** In a groundbreaking event, 21 humanoid robots raced against humans in the [Beijing Half-Marathon](https://www.newsweek.com/robots-race-humans-beijing-half-marathon-2025). ([Newsweek](https://www.newsweek.com))
-- **New SEC chair embraces crypto:** Paul Atkins, a former SEC commissioner and crypto advocate, has been sworn in as chairman, signaling a [pro-crypto shift](https://www.coindesk.com/policy/2025/04/21/paul-atkins-sworn-in-as-sec-chairman/).
-- **Circle integrates with traditional banking:** The $60 billion USDC stablecoin issuer has launched a [new payments network](https://www.theblock.co/post/351720/circle-launches-payments-network-to-connect-banks-and-stablecoins), bridging crypto and banking systems. ([The Block](https://www.theblock.co))
-
-# Query 2
-
-Could you do another draft please that includes more of the original links? It's ok for each bullet point to run up to five sentences in length.
-
-# Response
-
-### Five Things: April 20-26, 2025
-
-- **Markets show mixed signals:** Bitcoin experienced a significant rally early in the week, boosting confidence among crypto investors. Stock markets also saw gains, supported by optimism around improved tariff negotiations. However, concerns linger as the Dow remains on track for its worst month since the Great Depression. Analysts are debating whether this is a temporary setback or part of a larger economic trend. ([MarketWatch](https://www.marketwatch.com))
-
-- **U.S. antitrust crackdown on Google:** The federal government has escalated its case against Google by pushing to [break up the company](https://www.nbcnews.com/tech/tech-news/google-faces-us-government-attempt-break-company-search-monopoly-case). Regulators argue that Google’s dominance in search stifles competition and harms consumers. This case could set a precedent for future tech antitrust actions. Industry experts are divided, with some predicting a lengthy court battle and others suggesting this could lead to broader reforms in the tech sector. ([NBC News](https://www.nbcnews.com))
-
-- **Robots race humans in Beijing marathon:** In a groundbreaking experiment, 21 humanoid robots competed in the [Beijing Half-Marathon](https://www.newsweek.com/robots-race-humans-beijing-half-marathon-2025), marking a historic first for AI and robotics. The event showcased advancements in robotics technology, as some robots completed the grueling race alongside human runners. Newsweek’s coverage highlighted the implications for AI’s expanding role in human activities. This milestone sparks questions about the future of robotics in sports and other aspects of life. ([Newsweek](https://www.newsweek.com))
-
-- **Paul Atkins sworn in as pro-crypto SEC chair:** Paul Atkins, a former SEC commissioner known for his ties to the crypto industry, has officially assumed the role of SEC chairman. His appointment signals a potential shift toward more favorable regulatory policies for the crypto sector. Atkins has previously advocated for a balanced approach to regulation, emphasizing innovation while protecting investors. Industry leaders are optimistic about what his leadership could mean for blockchain and cryptocurrency adoption. ([CoinDesk](https://www.coindesk.com/policy/2025/04/21/paul-atkins-sworn-in-as-sec-chairman/))
-
-- **Circle bridges stablecoins and traditional banking:** Circle, the company behind the $60 billion USDC stablecoin, has launched a [new payments network](https://www.theblock.co/post/351720/circle-launches-payments-network-to-connect-banks-and-stablecoins). This initiative aims to connect stablecoins with traditional banking systems, enabling faster and more efficient transactions. The move is expected to strengthen the role of stablecoins in global finance. As stablecoins like USDC become more integrated with banks, the lines between traditional and decentralized finance continue to blur. ([The Block](https://www.theblock.co))
-
-
-Latter version is much closer to what we'll ultimately need. For now, I'll include Copilot's drafts in the list below, with old Leo versions commented out to preserve links I might want to restore later.
-
-Next step will be to do a final re-write/edit myself.
-
--->
+<!-- In the next revision, writehtrough 5 Things items yourself! -->
 
 # AI tips for journalists <!-- Need AI prompts to generate better hed, subhead later, when lead item is finished. -->
 ## tktk
@@ -85,18 +44,16 @@ Next step will be to do a final re-write/edit myself.
 
 *The week's top headlines about blockchain, AI, and other emerging technologies and trends re-shaping the web:*
 
-- **Markets show mixed signals:** Bitcoin experienced a significant rally early in the week, boosting confidence among crypto investors. Stock markets also saw gains, supported by optimism around improved tariff negotiations. However, concerns linger as the Dow remains on track for its worst month since the Great Depression. Analysts are debating whether this is a temporary setback or part of a larger economic trend. ([MarketWatch](https://www.marketwatch.com))
+- **Bitcoin's valuation briefly surpassed that of Google's parent Alphabet.** The cryptocurrency also became the world's [fifth-largest asset](https://www.coindesk.com/markets/2025/04/23/bitcoin-becomes-fifth-largest-global-asset-surpasses-google-s-market-cap) by market capitalization. However, a [strong earnings report](https://finance.yahoo.com/news/google-stock-rises-after-it-beats-on-earnings-raises-dividend-and-authorizes-70-billion-in-buybacks-192027323.html) from Alphabet helped it recover ground later in the week. As of Friday's close on Wall Street, Alphabet was valued at $TK trillion versus $TK trillion for bitcoin... <!-- Update after Friday's close. --> An [improved](https://www.reuters.com/world/china/china-considers-exempting-some-goods-us-tariffs-source-says-2025-04-25/) outlook on tariffs helped propel riskier assets like stocks and crypto throughout the week. That said, fears of a [possible U.S. recession](https://www.yahoo.com/news/imf-raises-us-recession-risk-192909541.html) are likely to simmer awhile longer.
 
-<!-- Old Leo version
-- **Markets:** <!-- Big bicoin rally early in the week. Stocks looking better as well, with improved tariff outlook. But the Dow may still be headed for its worst month since the Depression.  Bitcoin's price has [recovered to $94,000](https://www.coindesk.com/markets/2025/04/25/bitcoin-whales-return-in-force-buy-the-btc-price-rally-on-chain-data-show), with large investors, known as "whales," buying up coins from the market. According to Glassnode's data, wallets holding over 10,000 BTC have a high accumulation trend score, indicating significant buying activity. This trend suggests that investors are adopting a long-term holding strategy, with outflows from centralized exchanges reaching a two-year high. | Bitcoin has [reached a new milestone](https://www.coindesk.com/markets/2025/04/23/bitcoin-becomes-fifth-largest-global-asset-surpasses-google-s-market-cap), becoming the fifth-largest asset globally by market capitalization, with a value of $1.86 trillion. This achievement surpasses tech giant Google, with Bitcoin's price breaking above $94,000. The renewed optimism in the market is attributed to easing tensions in the U.S.–China tariff trade war, which has fueled gains for both Bitcoin and tech stocks. | *Bitcoin ETFs Experience Surge in Investments* American investors poured [nearly $1 billion](https://decrypt.co/315966/bitcoin-etfs-bounce-back-billion-day) into Bitcoin ETFs on Tuesday, marking the highest amount since January. This surge comes as the price of Bitcoin has risen to its highest point since early March, with the largest cryptocurrency by market value up almost 14% over the past 14 days. The ARK 21Shares Bitcoin ETF and BlackRock's iShares Bitcoin Trust led the surge, with $267 million and $193.5 million in net inflows, respectively. | This deal marks the [largest financing facility of its kind](https://decrypt.co/315987/sol-strategies-secures-500m-buy-more-solana) in the Solana ecosystem, with SOL Strategies aiming to become the leading institutional staking platform. The move comes as Solana's price has surged over 20% in the past two weeks, outpacing Bitcoin. | Bitcoin is showing [signs of maturity](https://cointelegraph.com/news/bitcoin-decouples-from-stocks-gains-safe-haven-status) as a global asset, decoupling from the US stock market and trading more like precious metals, according to Nansen CEO Alex Svanevik. Despite ongoing trade tensions and rising recession odds, Bitcoin's price has staged a 12% recovery over the past two weeks. This resilience is attributed to its growing role as a safe-haven asset and potential benefits from regulatory development and the US Bitcoin Reserve. | Crypto exchanges are increasingly [launching](https://cointelegraph.com/news/crypto-firms-moving-into-wall-street-growing-synergy) traditional investment offerings, signaling a convergence between the crypto and traditional finance (TradFi) spaces. This move aims to provide investors with more flexibility and access to both worlds. Key players like Kraken and Coinbase are leading the charge, with some seeing TradFi as a safety net and others as a launchpad for broader adoption. | A Solana whale has reportedly [accumulated](https://cointelegraph.com/news/solana-whale-153-million-profit-staking-4-years) over $153 million in unrealized gains after staking nearly 1 million tokens at a price of $27 in 2021, with the tokens now worth around $166 million. The whale recently started offloading a portion of the tokens, sending 100,000 SOL to Binance. This move comes as Solana briefly overtook Ethereum in staking market cap before reclaiming its position. | The CME Group plans to [launch XRP futures](https://www.theblock.co/post/351899/cme-group-plans-to-launch-xrp-futures-its-fourth-ever-crypto-add) within a month, pending regulatory review, marking its fourth foray into cryptocurrency offerings. This move follows the company's listing of Solana futures and reflects its increasing interest in crypto amid shifting regulatory circumstances in the U.S. XRP, with a market capitalization of over $127 billion, is seen as a natural expansion for the CME given its institutional-friendly blockchain and partnerships with major financial institutions. | According to a recent report from the FBI's Internet Crime Complaint Center, Americans aged 60 and older lost nearly $3 billion to crypto fraud in 2024, despite making up only 17% of the population. This demographic accounted for 30% of the total crypto fraud losses, with an average loss of $83,000 per victim. The FBI has attributed the rise in crypto fraud to scams such as ATM and kiosk fraud, which saw incidents almost double from 2023 to 2024. [Read the full story](https://www.example.com)
-
--->
-
-- **U.S. antitrust crackdown on Google:** The federal government has escalated its case against Google by pushing to [break up the company](https://www.nbcnews.com/tech/tech-news/google-faces-us-government-attempt-break-company-search-monopoly-case). Regulators argue that Google’s dominance in search stifles competition and harms consumers. This case could set a precedent for future tech antitrust actions. Industry experts are divided, with some predicting a lengthy court battle and others suggesting this could lead to broader reforms in the tech sector. ([NBC News](https://www.nbcnews.com))
+- **Antitrust woes piled up for Big Tech in U.S. courtrooms.** The Justice Department says it wants to [break up Google](https://www.nbcnews.com/tech/tech-news/google-faces-us-government-attempt-break-company-search-monopoly-case). Regulators argue that Google’s dominance in search stifles competition and harms consumers. This case could set a precedent for future tech antitrust actions. Industry experts are divided, with some predicting a lengthy court battle and others suggesting this could lead to broader reforms in the tech sector. ([NBC News](https://www.nbcnews.com))
 
 <!-- Old Leo version
 
-- **U.S. antitrust cases:** The U.S. government is pushing for Google to be [broken up](https://www.nbcnews.com/tech/tech-news/google-faces-us-government-attempt-break-company-search-monopoly-case-rcna202206?link_source=ta_bluesky_link&taid=680695c966e4b3000122e978) as a punishment for its alleged search engine monopoly, with a federal judge set to decide on remedies by Labor Day. The case, which has been ongoing since 2020, involves allegations that Google has been stifling competition and innovation, and could have significant implications for the tech industry. | The Justice Department is [urging](https://www.wsj.com/tech/google-justice-department-search-monopoly-hearing-d527c010?st=8x7TPT&reflink=desktopwebshare_permalink) a federal judge to force Google to loosen its grip on the search engine market by selling its Chrome web browser, as part of a landmark antitrust case. The move, which could result in new limits on Google, comes after a major ruling against the company in a separate antitrust case, and has been backed by more than 30 state attorneys general. | In a surprising twist, internal emails from 2018 [have surfaced](https://techcrunch.com/2025/04/21/mark-zuckerberg-once-suggested-spinning-out-instagram-as-a-solution-to-its-cannibalization-of-facebook/) showing that Meta CEO Mark Zuckerberg considered spinning out Instagram as a separate business due to concerns that its growth was cannibalizing Facebook's user engagement. According to the emails, Zuckerberg proposed building bridges between Meta's apps to prevent this cannibalization and even suggested rebranding Instagram and WhatsApp to emphasize Facebook's dominance.
+- **U.S. antitrust cases:** The U.S. government is pushing for Google to be [broken up](https://www.nbcnews.com/tech/tech-news/google-faces-us-government-attempt-break-company-search-monopoly-case-rcna202206?link_source=ta_bluesky_link&taid=680695c966e4b3000122e978) as a punishment for its alleged search engine monopoly, with a federal judge set to decide on remedies by Labor Day. The case, which has been ongoing since 2020, involves allegations that Google has been stifling competition and innovation, and could have significant implications for the tech industry. | The Justice Department is [urging](https://www.wsj.com/tech/google-justice-department-search-monopoly-hearing-d527c010?st=8x7TPT&reflink=desktopwebshare_permalink) a federal judge to force Google to loosen its grip on the search engine market by selling its Chrome web browser, as part of a landmark antitrust case. The move, which could result in new limits on Google, comes after a major ruling against the company in a separate antitrust case, and has been backed by more than 30 state attorneys general. |
+
+
+ In a surprising twist, internal emails from 2018 [have surfaced](https://techcrunch.com/2025/04/21/mark-zuckerberg-once-suggested-spinning-out-instagram-as-a-solution-to-its-cannibalization-of-facebook/) showing that Meta CEO Mark Zuckerberg considered spinning out Instagram as a separate business due to concerns that its growth was cannibalizing Facebook's user engagement. According to the emails, Zuckerberg proposed building bridges between Meta's apps to prevent this cannibalization and even suggested rebranding Instagram and WhatsApp to emphasize Facebook's dominance.
 
 -->
 
@@ -113,7 +70,8 @@ Next step will be to do a final re-write/edit myself.
 
 
 
-- **Paul Atkins sworn in as pro-crypto SEC chair:** Paul Atkins, a former SEC commissioner known for his ties to the crypto industry, has officially assumed the role of SEC chairman. His appointment signals a potential shift toward more favorable regulatory policies for the crypto sector. Atkins has previously advocated for a balanced approach to regulation, emphasizing innovation while protecting investors. Industry leaders are optimistic about what his leadership could mean for blockchain and cryptocurrency adoption. ([CoinDesk](https://www.coindesk.com/policy/2025/04/21/paul-atkins-sworn-in-as-sec-chairman/))
+- **Paul Atkins sworn in as pro-crypto SEC chair:** Paul Atkins, a former SEC commissioner known for his ties to the crypto industry, has officially assumed the role of SEC chairman. His appointment signals a potential shift toward more favorable regulatory policies for the crypto sector. Atkins has previously advocated for a balanced approach to regulation, emphasizing innovation while protecting investors. Industry leaders are optimistic about what his leadership could mean for blockchain and cryptocurrency adoption. ([CoinDesk](https://www.coindesk.com/policy/2025/04/21/paul-atkins-sworn-in-as-sec-chairman/)) | According to a recent report from the FBI's Internet Crime Complaint Center, Americans aged 60 and older lost nearly $3 billion to crypto fraud in 2024, despite making up only 17% of the population. This demographic accounted for 30% of the total crypto fraud losses, with an average loss of $83,000 per victim. The FBI has attributed the rise in crypto fraud to scams such as ATM and kiosk fraud, which saw incidents almost double from 2023 to 2024. [Read the full story](https://www.example.com)
+
 
 
 
@@ -122,7 +80,7 @@ Next step will be to do a final re-write/edit myself.
 
 -->
 
-- **Circle bridges stablecoins and traditional banking:** Circle, the company behind the $60 billion USDC stablecoin, has launched a [new payments network](https://www.theblock.co/post/351720/circle-launches-payments-network-to-connect-banks-and-stablecoins). This initiative aims to connect stablecoins with traditional banking systems, enabling faster and more efficient transactions. The move is expected to strengthen the role of stablecoins in global finance. As stablecoins like USDC become more integrated with banks, the lines between traditional and decentralized finance continue to blur. ([The Block](https://www.theblock.co))
+- **Circle bridges stablecoins and traditional banking:** Circle, the company behind the $60 billion USDC stablecoin, has launched a [new payments network](https://www.theblock.co/post/351720/circle-launches-payments-network-to-connect-banks-and-stablecoins). This initiative aims to connect stablecoins with traditional banking systems, enabling faster and more efficient transactions. The move is expected to strengthen the role of stablecoins in global finance. As stablecoins like USDC become more integrated with banks, the lines between traditional and decentralized finance continue to blur. ([The Block](https://www.theblock.co)) | Crypto exchanges are increasingly [launching](https://cointelegraph.com/news/crypto-firms-moving-into-wall-street-growing-synergy) traditional investment offerings, signaling a convergence between the crypto and traditional finance (TradFi) spaces. This move aims to provide investors with more flexibility and access to both worlds. Key players like Kraken and Coinbase are leading the charge, with some seeing TradFi as a safety net and others as a launchpad for broader adoption. |  The CME Group plans to [launch XRP futures](https://www.theblock.co/post/351899/cme-group-plans-to-launch-xrp-futures-its-fourth-ever-crypto-add) within a month, pending regulatory review, marking its fourth foray into cryptocurrency offerings. This move follows the company's listing of Solana futures and reflects its increasing interest in crypto amid shifting regulatory circumstances in the U.S. XRP, with a market capitalization of over $127 billion, is seen as a natural expansion for the CME given its institutional-friendly blockchain and partnerships with major financial institutions.
 
 <!-- Old Leo version
 
