Writing through "5 Things" items myself.

--- a/2025/2025-04-27-wir.md
+++ b/2025/2025-04-27-wir.md
@@ -48,13 +48,11 @@
 
 - **Big Tech's antitrust woes piled up in court.** The U.S. Justice Department told a federal judge in Washington it believes [Google should be broken up](https://news.google.com/read/CBMiiAFBVV95cUxPb0J4YWpWUW1aSXZUeUdkT0lPUnNvWFRIYzRRaWVhUmFzSlduSUNNWGpzRGxlT0xhaWtJU0J3ZVlPUWJkamhhY2xtZXV6TTVOOWZNUElYODV3dVFIRGxKcTN4Y0Z2U2l4OWR0d1djeXJBZDROS0xSLWU5QXNHOVpTYjk0QUxvckww?hl=en-US&gl=US&ceid=US%3Aen), including a sale of its Chrome browser. Google's lawyers are pushing for a narrower set of remedies... Meanwhile, in Meta's antitrust trial, the government introduced into evidence internal company emails in which CEO Mark Zuckerberg weighed a possible spin-off of Instagram due to concerns it was ["cannibalizing"](https://techcrunch.com/2025/04/21/mark-zuckerberg-once-suggested-spinning-out-instagram-as-a-solution-to-its-cannibalization-of-facebook/) Facebook's user engagement.
 
+- **Paul Atkins was sworn in as a pro-crypto SEC chair.** He thus [replaces](https://www.upi.com/Top_News/US/2025/04/22/Paul-Atkins-sworn-in-sec-chairman/6911745372094/) Gary Gensler, the Biden-era appointee widely despised in the industry for waging what many executives regarded as an overzealous crackdown by the securities regulator... But that's not to say the transition will be easy for Atkins. He immediately [faces pressure](https://www.ibtimes.com/new-sec-chair-paul-atkins-under-pressure-72-crypto-related-etf-applications-xrp-leads-filings-3770850) to decide on 72 pending crypto-related applications to list new exchange-traded funds, with Ripple leading the filings. Plus there's the uncanny tendency of his boss's family to [participate in crypto markets](https://www.coindesk.com/markets/2025/04/23/trump-coin-jumps-70-on-president-s-dinner-event-for-top-token-holders) personally in ways that would likely be called "insider trading" if they were to occur in the stock market.
+
+- **Stablecoins are getting more intertwined with traditional banking.** Circle, the company behind the $60 billion USDC stablecoin, [launched a new network](https://www.theblock.co/post/351720/circle-launches-payments-network-to-connect-banks-and-stablecoins) for payments and cross-border remittances. As stablecoins like USDC and rival Tether [increasingly become integrated](https://www.wsj.com/finance/currencies/crypto-knocks-on-the-door-of-a-banking-world-that-shut-it-out-082b3968?st=zDQWDU&reflink=desktopwebshare_permalink) with consumers' everyday transactions, some companies in the sector are even applying for traditional bank charters or licenses. Such moves would have been unthinkable just a few years ago in the wake of FTX's meltdown, when conventional finance firms scrambled to cut ties with the crypto industry.
+
 - **Newsweek has been all over stories about real-life AI use cases lately.** Funny enough, I must confess I only noticed this with some help from NotebookLM. Among the [recent stories](https://www.newsweek.com/topic/artificial-intelligence) covered by Newsweek's tech team: Bipedial robots [racing humans](https://www.newsweek.com/robots-race-humans-beijing-half-marathon-2025) in a Beijing half-marathon, a study in Dubai finding that one-third of government jobs there are at risk of being [replaced by AI](https://www.newsweek.com/ai-impact-artificial-intelligence-dubai-uae-2062953), a startup using AI to [enhance the customer experience](https://www.newsweek.com/ai-enabled-electric-vehicle-charging-coming-this-year-2062193) for charging electric vehicles, and U.S. healthcare companies' tentative steps to use AI to [optimize revenue](https://www.newsweek.com/ai-powered-claims-tools-healthcare-revenue-cycle-access-health-2062141).  
-- **Paul Atkins was sworn in as a pro-crypto SEC chair.** He thus [replaces](https://www.upi.com/Top_News/US/2025/04/22/Paul-Atkins-sworn-in-sec-chairman/6911745372094/) Gary Gensler, the Biden-era appointee widely despised in the industry for waging what many executives regarded as an overzealous crackdown by the securities regulator... But that's not to say the transition will be easy for Atkins. He immediately [faces pressure](https://www.ibtimes.com/new-sec-chair-paul-atkins-under-pressure-72-crypto-related-etf-applications-xrp-leads-filings-3770850) to decide on 72 pending crypto-related applications to list new exchange-traded funds, with Ripple leading the filings. Plus there's the uncanny tendency of his boss and other senior administration officials to [do things](https://www.coindesk.com/markets/2025/04/23/trump-coin-jumps-70-on-president-s-dinner-event-for-top-token-holders) concerning crypto that would likely be called "insider trading" if they were to happen in the stock market.
-
-- **Stablecoins are getting more intertwined with traditional banking.** Circle, the company behind the $60 billion USDC stablecoin, launched a [new payments network](https://www.theblock.co/post/351720/circle-launches-payments-network-to-connect-banks-and-stablecoins). This initiative aims to connect stablecoins with traditional banking systems, enabling faster and more efficient transactions. The move is expected to strengthen the role of stablecoins in global finance. As stablecoins like USDC become more integrated with banks, the lines between traditional and decentralized finance continue to blur. ([The Block](https://www.theblock.co)) | Crypto exchanges are increasingly [launching](https://cointelegraph.com/news/crypto-firms-moving-into-wall-street-growing-synergy) traditional investment offerings, signaling a convergence between the crypto and traditional finance (TradFi) spaces. This move aims to provide investors with more flexibility and access to both worlds. Key players like Kraken and Coinbase are leading the charge, with some seeing TradFi as a safety net and others as a launchpad for broader adoption. |  The CME Group plans to [launch XRP futures](https://www.theblock.co/post/351899/cme-group-plans-to-launch-xrp-futures-its-fourth-ever-crypto-add) within a month, pending regulatory review, marking its fourth foray into cryptocurrency offerings. This move follows the company's listing of Solana futures and reflects its increasing interest in crypto amid shifting regulatory circumstances in the U.S. XRP, with a market capitalization of over $127 billion, is seen as a natural expansion for the CME given its institutional-friendly blockchain and partnerships with major financial institutions.
-
-<!-- Old Leo version --> 
-**Stablecoins are getting more intertwined with traditional banking.** *Circle Launches New Payments Network* Circle, the company behind the $60 billion USDC stablecoin, is launching a new payments and cross-border remittance network, aiming to rival Mastercard and Visa. The network, initially targeting remittances, is seen as a strategic move to consolidate Circle's position in the payments space, leveraging the growing adoption of stablecoins for global money transfers. [Link](https://www.coindesk.com/business/2025/04/21/stablecoin-giant-circle-is-launching-a-new-payments-and-remittance-network) | *Crypto firms are making a push to integrate with traditional banking, with several planning to apply for bank charters or licenses.* This move comes as the Trump administration works to incorporate crypto into mainstream finance, with Congress advancing legislation that would establish a regulatory framework for stablecoins and allow them to operate under stricter oversight. [Link](https://www.wsj.com/finance/currencies/crypto-knocks-on-the-door-of-a-banking-world-that-shut-it-out-082b3968?st=zDQWDU&reflink=desktopwebshare_permalink) -->
 
 ### Looking Ahead
 
